modified nav button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             cumque nemo doloremque quidem totam libero hic iste maiores delectus
             velit id amet nostrum quasi, quae beatae enim atque asperiores illo.
           </p>
-               <a href="" class="button"> Book Now</a>
+               <a href="" class=" nav-btn home-btn"> Book Now</a>
           
         </div>
       </div>
