deleted video in html fille

--- a/index.html
+++ b/index.html
@@ -39,15 +39,11 @@
       <h1 class="title">About our tour</h1>
       <div class="container">
         <div class="video">
-          <iframe
+          <!-- <iframe
             width="560"
             height="315"
             src="https://www.youtube.com/watch?v=WNpkHUH8Jfc"
-            title="youtube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
+</iframe> -->
         </div>
         <div class="about.text">
           <div class="firstparagraph">
