--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav >
+    <nav>
       <div class="logo">
-        <img src="/images/logo3.png" alt="RWANDA-BOOKING TOUR" class="logo-img">
+        <img
+          src="/images/logo3.png"
+          alt="RWANDA-BOOKING TOUR"
+          class="logo-img"
+        />
       </div>
       <ul class="nav-links">
         <li><a href="#home" class="nav-link">Home</a></li>
@@ -30,8 +34,7 @@
             cumque nemo doloremque quidem totam libero hic iste maiores delectus
             velit id amet nostrum quasi, quae beatae enim atque asperiores illo.
           </p>
-               <a href="" class="button"> Book Now</a>
-          
+          <a href="" class="nav-btn home-btn"> Book Now</a>
         </div>
       </div>
     </header>
@@ -42,10 +45,10 @@
           <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/watch?v=WNpkHUH8Jfc"
-            title="youtube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            src="https://www.youtube.com/embed/i8fa3JIrgpY"
+            title="YouTube video player"
             frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
         </div>
@@ -79,7 +82,7 @@
           <div class="card-content">
             <h5 class="schedule-title">Tour schedule</h5>
             <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
-            <div class="tour-title"> NYUNGWE</div>
+            <div class="tour-title">NYUNGWE</div>
             <p class="tour-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
               expedita odit nemo cupiditate aut earum sapiente quos inventore
@@ -94,82 +97,81 @@
           <a href="" class="nav-link nav-btn read-btn"> Read More</a>
         </div>
         <div class="card">
-            <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
-            <div class="card-content">
-              <h5 class="schedule-title">Tour schedule</h5>
-              <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
-              <div class="tour-title">NYUNGWE </div>
-              <p class="tour-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                expedita odit nemo cupiditate aut earum sapiente quos inventore
-                dolor doloremque beatae autem ut perspiciatis blanditiis
-                repellendus, dolores culpa est aperiam.
-              </p>
-              <div class="place-number">
-                <h5 class="place-title">Place</h5>
-                <p class="place">15/30</p>
-              </div>
+          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <div class="card-content">
+            <h5 class="schedule-title">Tour schedule</h5>
+            <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
+            <div class="tour-title">NYUNGWE</div>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+              expedita odit nemo cupiditate aut earum sapiente quos inventore
+              dolor doloremque beatae autem ut perspiciatis blanditiis
+              repellendus, dolores culpa est aperiam.
+            </p>
+            <div class="place-number">
+              <h5 class="place-title">Place</h5>
+              <p class="place">15/30</p>
             </div>
-            <a href="" class="nav-link nav-btn read-btn"> Read More</a>
           </div>
-          <div class="card">
-            <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
-            <div class="card-content">
-              <h5 class="schedule-title">Tour schedule</h5>
-              <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
-              <div class="tour-title">NYUNGWE </div>
-              <p class="tour-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                expedita odit nemo cupiditate aut earum sapiente quos inventore
-                dolor doloremque beatae autem ut perspiciatis blanditiis
-                repellendus, dolores culpa est aperiam.
-              </p>
-              <div class="place-number">
-                <h5 class="place-title">Place</h5>
-                <p class="place">15/30</p>
-              </div>
+          <a href="" class="nav-link nav-btn read-btn"> Read More</a>
+        </div>
+        <div class="card">
+          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <div class="card-content">
+            <h5 class="schedule-title">Tour schedule</h5>
+            <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
+            <div class="tour-title">NYUNGWE</div>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+              expedita odit nemo cupiditate aut earum sapiente quos inventore
+              dolor doloremque beatae autem ut perspiciatis blanditiis
+              repellendus, dolores culpa est aperiam.
+            </p>
+            <div class="place-number">
+              <h5 class="place-title">Place</h5>
+              <p class="place">15/30</p>
             </div>
-            <a href="" class="nav-link nav-btn read-btn"> Read More</a>
           </div>
-          <div class="card">
-            <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
-            <div class="card-content">
-              <h5 class="schedule-title">Tour schedule</h5>
-              <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
-              <div class="tour-title"> NYUNGWE</div>
-              <p class="tour-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                expedita odit nemo cupiditate aut earum sapiente quos inventore
-                dolor doloremque beatae autem ut perspiciatis blanditiis
-                repellendus, dolores culpa est aperiam.
-              </p>
-              <div class="place-number">
-                <h5 class="place-title">Place</h5>
-                <p class="place">15/30</p>
-              </div>
+          <a href="" class="nav-link nav-btn read-btn"> Read More</a>
+        </div>
+        <div class="card">
+          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <div class="card-content">
+            <h5 class="schedule-title">Tour schedule</h5>
+            <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
+            <div class="tour-title">NYUNGWE</div>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+              expedita odit nemo cupiditate aut earum sapiente quos inventore
+              dolor doloremque beatae autem ut perspiciatis blanditiis
+              repellendus, dolores culpa est aperiam.
+            </p>
+            <div class="place-number">
+              <h5 class="place-title">Place</h5>
+              <p class="place">15/30</p>
             </div>
-            <a href="" class="nav-link nav-btn read-btn"> Read More</a>
           </div>
-          <div class="card">
-            <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
-            <div class="card-content">
-              <h5 class="schedule-title">Tour schedule</h5>
-              <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
-              <div class="tour-title"> NYUNGWE</div>
-              <p class="tour-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                expedita odit nemo cupiditate aut earum sapiente quos inventore
-                dolor doloremque beatae autem ut perspiciatis blanditiis
-                repellendus, dolores culpa est aperiam.
-              </p>
-              <div class="place-number">
-                <h5 class="place-title">Place</h5>
-                <p class="place">15/30</p>
-              </div>
+          <a href="" class="nav-link nav-btn read-btn"> Read More</a>
+        </div>
+        <div class="card">
+          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <div class="card-content">
+            <h5 class="schedule-title">Tour schedule</h5>
+            <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
+            <div class="tour-title">NYUNGWE</div>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+              expedita odit nemo cupiditate aut earum sapiente quos inventore
+              dolor doloremque beatae autem ut perspiciatis blanditiis
+              repellendus, dolores culpa est aperiam.
+            </p>
+            <div class="place-number">
+              <h5 class="place-title">Place</h5>
+              <p class="place">15/30</p>
             </div>
-            <a href="" class="nav-link nav-btn read-btn"> Read More</a>
           </div>
-
+          <a href="" class="nav-link nav-btn read-btn"> Read More</a>
+        </div>
       </div>
     </div>
   </body>
