change direction of images in index.html and css/styel.css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RWANDA BOOKING TOUR</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav>
       <div class="logo">
         <img
-          src="/images/logo3.png"
+          src="images/logo3.png"
           alt="RWANDA-BOOKING TOUR"
           class="logo-img"
         />
@@ -78,7 +78,7 @@
       <h2 class="title">Our Exciting Tours</h2>
       <div class="main-card">
         <div class="card">
-          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <img src="images/gorilla2.jpeg" alt="gorilla" class="img-card" />
           <div class="card-content">
             <h5 class="schedule-title">Tour schedule</h5>
             <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
@@ -97,7 +97,7 @@
           <a href="" class="nav-link nav-btn read-btn"> Read More</a>
         </div>
         <div class="card">
-          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <img src="images/gorilla2.jpeg" alt="gorilla" class="img-card" />
           <div class="card-content">
             <h5 class="schedule-title">Tour schedule</h5>
             <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
@@ -116,7 +116,7 @@
           <a href="" class="nav-link nav-btn read-btn"> Read More</a>
         </div>
         <div class="card">
-          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <img src="images/gorilla2.jpeg" alt="gorilla" class="img-card" />
           <div class="card-content">
             <h5 class="schedule-title">Tour schedule</h5>
             <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
@@ -135,7 +135,7 @@
           <a href="" class="nav-link nav-btn read-btn"> Read More</a>
         </div>
         <div class="card">
-          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <img src="images/gorilla2.jpeg" alt="gorilla" class="img-card" />
           <div class="card-content">
             <h5 class="schedule-title">Tour schedule</h5>
             <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
@@ -154,7 +154,7 @@
           <a href="" class="nav-link nav-btn read-btn"> Read More</a>
         </div>
         <div class="card">
-          <img src="/images/gorilla2.jpeg" alt="gorilla" class="img-card" />
+          <img src="images/gorilla2.jpeg" alt="gorilla" class="img-card" />
           <div class="card-content">
             <h5 class="schedule-title">Tour schedule</h5>
             <p class="schedule-date">saturday 31 <sup>st</sup> june 2022</p>
